[package]
name = "pipebuf_websocket"
version = "0.1.0"
edition = "2021"
authors = ["Jim Peters <jim@uazu.net>"]

description = "PipeBuf support for websockets"
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/uazu/pipebuf_websocket"
documentation = "https://docs.rs/pipebuf_websocket"

keywords = ["websocket","websockets","async","pipebuf"]
categories = [ "asynchronous", "network-programming" ]

[dependencies]
pipebuf = "0.2"
embedded-websocket = "0.8"
httparse = { version = "1.4", default-features = false }
